--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "none",
   "printWidth": 80,
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "semi": false
 }
