--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@next/font": "13.1.2",
@@ -21,7 +22,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "autoprefixer": "^10.4.13",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
     "tailwindcss": "^3.2.4"
